2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made public member variable in Metalinker private
	* src/MetalinkParserController.cc
	* src/Metalinker.cc
	* src/Metalinker.h
	* test/MetalinkParserControllerTest.cc
	* test/MetalinkProcessorTest.cc
	* test/MetalinkerTest.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/SharedHandle.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/messageDigest.cc
	* src/messageDigest.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made protected member variable private.
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodImpl.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made protected member variable private.
	* src/UTMetadataDataExtensionMessage.cc
	* src/UTMetadataExtensionMessage.h
	* src/UTMetadataRejectExtensionMessage.cc
	* src/UTMetadataRequestExtensionMessage.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/TimeSeedCriteria.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/TimeA2.cc
	* src/TimeA2.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/SpeedCalc.cc
	* src/SpeedCalc.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables in SegmentMan
	* src/RequestGroup.cc
	* src/RequestGroupMan.cc
	* src/SegmentMan.cc
	* src/SegmentMan.h
	* src/XmlRpcMethodImpl.cc
	* test/BtDependencyTest.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/RequestSlot.cc
	* src/RequestSlot.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/Range.cc
	* src/Range.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.